<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_activities"
    tools:context=".Login">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/Iniciasesion"
        android:textColor="@color/negroTitulo"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUserNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/NombreUsuario"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etUserNameLogin"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/fondo_edit_text"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/CeriOwl"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserNameLogin" />

    <TextView
        android:id="@+id/txtContraseniaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="157dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/Contraseña"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserNameLogin" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/fondo_edit_text"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/asteriscos"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseniaLogin" />

    <Button
        android:id="@+id/loginBttn"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_salmon"
        android:fontFamily="@font/roboto_black"
        android:text="@string/IniciarSesion"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/MantenerSesion"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBttn" />

    <Button
        android:id="@+id/bttnRegistrarseLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="205dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/no_cuenta"
        android:elevation="0dp"
        android:onClick="bttnRegister"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/NoTienesCuenta"
        android:textAllCaps="false"
        android:textColor="@color/notienescuenta"
        android:textSize="15dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin"
        app:srcCompat="@drawable/hamburguesa" />

</androidx.constraintlayout.widget.ConstraintLayout>